fix(DrawerList): use overflow hidden instead of clip-path for arrow --run-all

--- a/packages/dnb-eufemia/src/fragments/drawer-list/style/dnb-drawer-list.scss
+++ b/packages/dnb-eufemia/src/fragments/drawer-list/style/dnb-drawer-list.scss
@@ -303,6 +303,7 @@
     height: calc(var(--drawer-list-height) / 2);
 
     z-index: -1;
+    overflow: hidden;
 
     &::before {
       content: '';
@@ -313,7 +314,6 @@
       width: calc(var(--drawer-list-height) / 2);
       height: calc(var(--drawer-list-height) / 2);
       transform: translateY(60%) rotate(45deg);
-      clip-path: polygon(0% 0%, 100% 0%, 0% 100%);
 
       background-color: var(--drawer-list-list-background);
     }
